--- a/public/services.html
+++ b/public/services.html
@@ -78,103 +78,66 @@
          </nav>
       </header>
       <section>
-         <!-- CAROUSEL -->  	
-         <div id="carousel">
-            <div id="owl-demo" class="owl-carousel owl-theme">
-               <div class="item">
-                  <img src="img/first.jpg" alt="">      
-                  <div class="carousel-text">
-                     <div class="line">
-                        <div class="s-12 l-9">
-                           <h2>We represent over 200 independent convenience store owners</h2>
-                        </div>
-                        <div class="s-12 l-9">
-                           <p>We negotiate the best prices in the city for our members
-                           </p>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="item">
-                  <img src="img/second.jpg" alt="">      
-                  <div class="carousel-text">
-                     <div class="line">
-                        <div class="s-12 l-9">
-                           <h2>Let us represent you to retailers!</h2>
-                        </div>
-                        <div class="s-12 l-9">
-                           <p>Come to us for the best bargaining power
-                           </p>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="item">
-                  <img src="img/third.jpg" alt="">      
-                  <div class="carousel-text">
-                     <div class="line">
-                        <div class="s-12 l-9">
-                           <h2>We contribute to the Alamo City economy.</h2>
-                        </div>
-                        <div class="s-12 l-9">
-                           <p>Go Spurs Go!
-                           </p>
-                        </div>
-                     </div>
-                  </div>
-               </div>
+         <div id="head">
+            <div class="line">
+               <h1>Amazing responsive theme based on Responsee</h1>
             </div>
          </div>
-         <!-- FIRST BLOCK --> 	
-         <div id="first-block">
+         <div id="content">
             <div class="line">
-               <h2>Who We Are</h2>
-               <p class="subtitile">The Association of Convenience Store Retailers
-               </p>
                <div class="margin">
-                  <div class="s-12 m-6 l-3 margin-bottom">
-                     <i class="icon-paperplane_ico icon2x"></i>
-                     <h3>About</h3>
-                     <p>We are a union of convenience store owners who collectively bargain for discounted prices and additional benefits for our members.
-                     </p>
+                  <div class="s-12 m-6 l-4">
+                     <div class="content-block margin-bottom">
+                        <i class="icon-paperplane_ico icon2x"></i>
+                        <h3>Lightweight</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                        </p>
+                     </div>
                   </div>
-                  <div class="s-12 m-6 l-3 margin-bottom">
-                     <i class="icon-star icon2x"></i>
-                     <h3>Company</h3>
-                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                     </p>
+                  <div class="s-12 m-6 l-4">
+                     <div class="content-block margin-bottom">
+                        <i class="icon-display_screen icon2x"></i>
+                        <h3>Responsive</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                        </p>
+                     </div>
                   </div>
-                  <div class="s-12 m-6 l-3 margin-bottom">
-                     <i class="icon-message icon2x"></i>
-                     <h3>Services</h3>
-                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                     </p>
+                  <div class="s-12 m-6 l-4">
+                     <div class="content-block margin-bottom">
+                        <i class="icon-heart icon2x"></i>
+                        <h3>Intuitive</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                        </p>
+                     </div>
                   </div>
-                  <div class="s-12 m-6 l-3 margin-bottom">
-                     <i class="icon-mail icon2x"></i>
-                     <h3>Contact</h3>
-                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                     </p>
+                  <div class="s-12 m-6 l-4">
+                     <div class="content-block margin-bottom">
+                        <i class="icon-attachment icon2x"></i>
+                        <h3>Useful</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                        </p>
+                     </div>
+                  </div>
+                  <div class="s-12 m-6 l-4">
+                     <div class="content-block margin-bottom">
+                        <i class="icon-reorder icon2x"></i>
+                        <h3>Responsive navigation</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                        </p>
+                     </div>
+                  </div>
+                  <div class="s-12 m-6 l-4">
+                     <div class="content-block margin-bottom">
+                        <i class="icon-mail icon2x"></i>
+                        <h3>Responsive components</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                        </p>
+                     </div>
                   </div>
                </div>
             </div>
          </div>
-         <!-- SECOND BLOCK --> 	
-<!--          <div id="second-block">
-            <div class="line">
-               <div class="margin-bottom">
-                  <div class="margin">
-                     <article class="s-12 l-8 center">
-                        <h1>Amazing title</h1>
-                        <p class="margin-bottom">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-                        </p>
-                        <a class="button s-12 l-4 center" href="product.html">Read more</a>  			
-                     </article>
-                  </div>
-               </div>
-            </div>
-         </div> -->
-         <!-- GALLERY --> 	
+         <!-- GALLERY -->	
          <div id="third-block">
             <div class="line">
                <h2>Responsive gallery</h2>
@@ -182,22 +145,22 @@
                </p>
                <div class="margin">
                   <div class="s-12 m-6 l-3">
-                     <img src="img/first-small.jpg" alt="alternative text">      
+                     <img src="img/first-small.jpg">      
                      <p class="subtitile">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                      </p>
                   </div>
                   <div class="s-12 m-6 l-3">
-                     <img src="img/second-small.jpg" alt="alternative text">      
+                     <img src="img/second-small.jpg">      
                      <p class="subtitile">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                      </p>
                   </div>
                   <div class="s-12 m-6 l-3">
-                     <img src="img/third-small.jpg" alt="alternative text">      
+                     <img src="img/third-small.jpg">      
                      <p class="subtitile">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                      </p>
                   </div>
                   <div class="s-12 m-6 l-3">
-                     <img src="img/fourth-small.jpg" alt="alternative text">      
+                     <img src="img/fourth-small.jpg">      
                      <p class="subtitile">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                      </p>
                   </div>
@@ -219,7 +182,7 @@
                   </div>
                   <div class="item">
                      <h2>Retina ready</h2>
-                     <p class="s-12 m-12 l-8 center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit  lobortis nisl ut aliquip ex ea commodo consequat.
+                     <p class="s-12 m-12 l-8 center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
                      </p>
                   </div>
                </div>
